chore: rename package

--- a/manifest.json
+++ b/manifest.json
@@ -1,5 +1,5 @@
 {
-  "name": "mmaudio-dxt",
+  "name": "mmaudio-mcp",
   "displayName": "MMAudio Desktop Extension",
   "description": "AI-powered video-to-audio and text-to-audio generation using MMAudio API. Generate professional audio content with advanced AI technology.",
   "version": "1.0.0",
