--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mmaudio-dxt",
+  "name": "mmaudio-mcp",
   "version": "1.0.0",
   "description": "MMAudio Desktop Extension - AI-powered video-to-audio and text-to-audio generation",
   "main": "server/index.js",
