chore: remove test action

--- a/manifest.json
+++ b/manifest.json
@@ -93,7 +93,6 @@
   },
   "scripts": {
     "start": "node server/index.js",
-    "dev": "node --inspect server/index.js",
-    "test": "node test.js"
+    "dev": "node --inspect server/index.js"
   }
 } 
